tests/negative/list_combined_break_continue_oob.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for (i = 0; i < 8; i = i + 1) {
    if (i == 3) { continue }
    if (i == 6) { break }
    lst.push(i)
  }
  lst[5] = 1
  return 0
}
